@@ -15,6 +15,7 @@ v8.0.29
 - WL#14852: Align TLS option checking across connectors
 - WL#14824: Remove Python 3.6 support
 - WL#14679: Allow custom class for data type conversion in Django backend
+- WL#14665: SSPI Kerberos authentication for Windows (pure-python)
 - BUG#33729842: Character set 'utf8mb3' support
 
 v8.0.28
